@@ -1,0 +1,60 @@
+<? include /main_top.pyhtml ?>
+<?
+errormsg = ""
+if post_params:
+	if not post_params['hostname']:
+		errormsg += "You didn't give a hostname!<br>"
+	elif not (post_params['current_ip'] or post_params['current_dhcp'] or post_params['current_netup']):
+		errormsg += "You must specify an IP address or DHCP!<br>"
+	elif not post_params['mac']:
+		errormsg += "You must specify the mac address of the client!<br>"
+	else:
+		for client in shared_info.clients:
+			if post_params['mac'] == client['mac']:
+				errormsg = "That client already exists!"
+		if not errormsg:
+			try:
+				new_client = {}
+				new_client['hostname'] = post_params['hostname']
+				new_client['mac'] = post_params['mac']
+				if post_params['current_netup']:
+					new_client['current_ip'] = "None"
+				elif post_params['current_dhcp']:
+					new_client['current_ip'] = "dhcp"
+				else:
+					new_client['current_ip'] = post_params['current_ip']
+				if post_params['profile']:
+					new_client['profile'] = post_params['profile']
+				if post_params['post_dhcp']:
+					new_client['post_ip'] = "dhcp"
+				elif post_params['post_ip']:
+					new_client['post_ip'] = post_params['post_ip']
+				new_client['start_install'] = False
+				shared_info.clients.append(new_client)
+			except:
+				errormsg += "Error while adding the new profile!"
+	if not errormsg:
+		errormsg = "Profile added successfully"
+
+?>
+<: if errormsg:
+<br><% errormsg %><br><br>
+:>
+<h2>Add Client:</h2>
+<br>
+Note, all clients will first start with the start_install flag unset.  You must use the Execute
+step to deploy all installations.
+<form action="/add_client.pyhtml" method="POST" enctype="multipart/form-data">
+Hostname: <input type="text" name="hostname"><br>
+MAC Address: <input type="text" name="mac" max_length="18"><br>
+Current IP: <input type="text" name="current_ip" max_length="15"> --- or <input type="checkbox" name="current_dhcp"> DHCP --- or <input type="checkbox" name="current_netup"> None (client is already up and connected to the net)<br>
+Profile to be used by this client: <input type="text" name="profile"><br><hr>
+Post-install settings:
+Post-install network IP: <input type="text" name="post_ip" max_length="15"> 
+blah blah netmask gateway blah.
+--- or <input type="checkbox" name="post_dhcp"> DHCP.
+
+<input type="submit" name="addclient" value="Add Client">
+</form>
+
+<? include /main_bottom.pyhtml ?>
