@@ -1,0 +1,36 @@
+<? include /main_top.pyhtml ?>
+<?
+errormsg = ""
+if post_params:
+	if post_params['profile_name']:
+		for profile in shared_info.profiles:
+			if post_params['profile_name'] == profile['name']:
+				errormsg = "That profile already exists!"
+		if not errormsg:
+			try:
+				new_profile = {}
+				new_profile['name'] = post_params['profile_name']
+				new_profile['ccxmlfile'] = post_params['ccxmlfile']
+				new_profile['ipxmlfile'] = post_params['ipxmlfile']
+				shared_info.profiles.append(new_profile)
+			except:
+				errormsg += "Error while adding the new profile!"
+	else:
+		errormsg += "You didn't specify a profile name! "
+	if not errormsg:
+		errormsg = "Profile added successfully"
+
+?>
+<: if errormsg:
+<br><% errormsg %><br><br>
+:>
+<h2>Create Profile:</h2>
+<br>
+<form action="/add_profile.pyhtml" method="POST" enctype="multipart/form-data">
+Name: <input type="text" name="profile_name"><br>
+Client Configuration Profile Filename: <input type="text" name="ccxmlfile"><br>
+Installation Profile Filename: <input type="text" name="ipxmlfile"><br>
+<input type="submit" name="addprofile" value="Add Profile">
+</form>
+
+<? include /main_bottom.pyhtml ?>
