@@ -1,11 +1,23 @@
 <? include /main_top.pyhtml ?>
 
-<h2>Clients</h2>
+<h2>Delete Client</h2>
+<: if post_params['delclient']:
+<?	
+for i,client in __builtins__.enumerate(shared_info.clients):
+	if client['hostname'] == post_params['delclient']:
+		try:
+			del shared_info.clients[i]
+			print "<h1>Client "+post_params['delclient']+" deleted!</h1>"
+		except:
+			print "Error: could not delete client: "+ post_params['delclient']
+?>	
+:>
+<form action="#" method="post" enctype="multipart/form-data" name="delete">
 <table width="100%" cellpadding="0" cellpadding="0">
   <tr>
-    <td><u>Name</u></td>
+	<td><u>DELETE</u></td>
+	<td><u>Name</u></td>
     <td><u>MAC</u></td>
-    <td><u>Current IP</u></td>
     <td><u>Post-install IP</u></td>
     <td><u>Profile</u></td>
     <td><u>Install progress</u></td>
@@ -18,6 +30,7 @@ if client['mac'] in shared_info.client_state:
 	client_info[5] = shared_info.client_state[client['mac']]['install_status']
 ?>
   <tr>
+  	<td><input type="radio" name="delclient" value="<% client_info[0] %>"></td>
     <td><% client_info[0] %></td>
     <td><% client_info[1] %></td>
     <td><% client_info[2] %></td>
@@ -27,5 +40,6 @@ if client['mac'] in shared_info.client_state:
   </tr>
 :>
 </table>
-
+<br><input type="submit" name="DelSubmit" value="DELETE (no takebacks!)">
+</form>
 <? include /main_bottom.pyhtml ?>
