@@ -1,0 +1,34 @@
+<? include /main_top.pyhtml ?>
+
+<h2>Delete Profile</h2>
+<: if post_params['delprofile']:
+<?	
+for i,profile in __builtins__.enumerate(shared_info.profiles):
+	if profile['name'] == post_params['delprofile']:
+		try:
+			del shared_info.profiles[i]
+			print "<h1>Profile "+post_params['delprofile']+" deleted!</h1>"
+		except:
+			print "Error: could not delete profile: "+ post_params['delprofile']
+?>	
+:>
+<form action="#" method="post" enctype="multipart/form-data" name="delete">
+<p>
+  <table><tr><td>DELETE</td><td>Profile Name:</td><td>Profile CC filename:</td><td>Profile IP filename:</td></tr>
+  
+<: for profile in shared_info.profiles:
+<?
+profile_info = [profile['name'], profile['ccxmlfile'], profile['ipxmlfile'] ]
+
+?>
+  <tr>
+    <td><input type="radio" name="delprofile" value="<% profile_info[0] %>" unchecked></td>
+	<td><% profile_info[0] %></td>
+    <td><% profile_info[1] %></td>
+    <td><% profile_info[2] %></td>
+  </tr>
+:>
+</table>
+<br><input type="submit" name="DelSubmit" value="DELETE (no takebacks!)">
+</form>
+<? include /main_bottom.pyhtml ?>
