@@ -1,8 +1,17 @@
 <? include /main_top.pyhtml ?>
 
-<h2>Clients</h2>
+<h2>Edit Client</h2>
+<: if post_params['editclient']:
+<?
+for client in shared_info.clients:
+	if client['hostname'] == post_params['editclient']:
+		print "Found the client.  Normally we'd let you edit its info here.. but <h2>HAHA ITS NOT DONE.</h2><br>"
+?>	
+:>
+<form action="#" method="post" enctype="multipart/form-data" name="edit">
 <table width="100%" cellpadding="0" cellpadding="0">
   <tr>
+  	<td><u>EDIT</u></td>
     <td><u>Name</u></td>
     <td><u>MAC</u></td>
     <td><u>Current IP</u></td>
@@ -18,6 +27,7 @@ if client['mac'] in shared_info.client_state:
 	client_info[5] = shared_info.client_state[client['mac']]['install_status']
 ?>
   <tr>
+  	<td><input type="radio" name="editclient" value="<% client_info[0] %>"></td>
     <td><% client_info[0] %></td>
     <td><% client_info[1] %></td>
     <td><% client_info[2] %></td>
@@ -27,5 +37,6 @@ if client['mac'] in shared_info.client_state:
   </tr>
 :>
 </table>
-
+<br><input type="submit" name="EditSubmit" value="Edit">
+</form>
 <? include /main_bottom.pyhtml ?>
