@@ -1,0 +1,30 @@
+<? include /main_top.pyhtml ?>
+
+<h2>Edit Profile</h2>
+<: if post_params['editprofile']:
+<?
+for profile in shared_info.profiles:
+	if profile['name'] == post_params['editprofile']:
+		print "Found the profile.  Normally we'd let you edit the profile here.. but <h2>HAHA ITS NOT DONE.</h2><br>"
+?>	
+:>
+<form action="#" method="post" enctype="multipart/form-data" name="edit">
+  <p>
+  <table><tr><td>Edit</td><td>Profile Name:</td><td>Profile CC filename:</td><td>Profile IP filename:</td></tr>
+  
+<: for profile in shared_info.profiles:
+<?
+profile_info = [profile['name'], profile['ccxmlfile'], profile['ipxmlfile'] ]
+
+?>
+  <tr>
+    <td><input type="radio" name="editprofile" value="<% profile_info[0] %>" unchecked></td>
+	<td><% profile_info[0] %></td>
+    <td><% profile_info[1] %></td>
+    <td><% profile_info[2] %></td>
+  </tr>
+:>
+</table>
+<br><input type="submit" name="EditSubmit" value="Edit">
+</form>
+<? include /main_bottom.pyhtml ?>
