@@ -2,33 +2,31 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-  <title>Master GLI Server Setup</title>
+  <title>Gentoo Linux Installation Management Daemon</title>
 </head>
 <body>
 <table cellpadding="0" cellspacing="5">
   <tr>
-    <td width=130>Picture here. Gentoo Logo</td>
-    <td><img src="/banner-800x64.png"></td>
-  </tr>
-  <tr>
     <td valign-"top">
       <!-- Left hand column starts here -->
+	  <img src="/l33t_LOG_ice_cream_gentoo.png">
       <p><a href="/welcome.pyhtml">Welcome</a></p>
       <p>Profiles:<br>
-      <a href="mastergli.php?page=CreateProfile">Create</a><br>
-      <a href="mastergli.php?page=EditProfile">Edit</a><br>
-      <a href="mastergli.php?page=DeleteProfile">Delete</a></p>
+      <a href="add_profile.pyhtml">Create</a><br>
+      <a href="edit_profile.pyhtml">Edit</a><br>
+      <a href="delete_profile.pyhtml">Delete</a></p>
       <p>Clients:<br>
-      <a href="mastergli.php?page=AddClient">Add Client</a><br>
-      <a href="/showclients.pyhtml">Manage</a><br>
-      <a href="mastergli.php?page=DeleteClient">Delete</a></p>
+      <a href="add_client.pyhtml">Add Client</a><br>
+      <a href="showclients.pyhtml">Manage</a><br>
+      <a href="delete_client.pyhtml">Delete</a></p>
       <p>Install:<br>
       <a href="mastergli.php?page=Configure">Configure</a><br>
       <a href="mastergli.php?page=Execute">Execute</a><br>
       <a href="mastergli.php?page=Status">Status</a></p>
       <p>Master Server:<br>
       <a href="/loadprofile.pyhtml">Load Profile</a><br>
-      <a href="/saveprofile.pyhtml">Save Profile</a></p>
+      <a href="/saveprofile.pyhtml">Save Profile</a><br>
+	  <a href="/loadprofiles_from_db.pyhtml">Load Profiles from Gimli</a>
       </p>
     </td>
     <td valign="top">
