@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><title>WebGLI Mockup</title>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><title>GLIMD Mockup</title>
     
     <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
     <style type="text/css">
@@ -145,11 +145,11 @@
             </tr>
             <tr>
               <td class="tabbarsl" id="tabbarl"><img src="images/spacer.png" alt=""></td>
-              <td class="tabbars" id="tabbar0" onclick="changetab(0,5); top.frames['content'].location.href = '/welcome';"><a id="tabbar0a" class="tabbars" href="/welcome" target="content" onclick="return false;">Welcome</a></td>
-              <td class="tabbarsmr" id="tabbar0r" onclick="changetab(0,5); top.frames['content'].location.href = '/welcome';"><img src="images/spacer.png" alt=""></td>
-              <td class="tabbarn" id="tabbar1" onclick="changetab(1,5);"><a id="tabbar1a" class="tabbarn" href="#" onclick="return false;">Profiles</td>
+              <td class="tabbars" id="tabbar0" onclick="changetab(0,5); top.frames['content'].location.href = '/welcome.pyhtml';"><a id="tabbar0a" class="tabbars" href="/welcome.pyhtml" target="content" onclick="return false;">Welcome</a></td>
+              <td class="tabbarsmr" id="tabbar0r" onclick="changetab(0,5); top.frames['content'].location.href = '/welcome.pyhtml';"><img src="images/spacer.png" alt=""></td>
+              <td class="tabbarn" id="tabbar1" onclick="changetab(1,5);"><a id="tabbar1a" class="tabbarn" href="/edit_profile.pyhtml" onclick="return false;">Profiles</td>
               <td class="tabbarnm" id="tabbar1r" onclick="changetab(1,5);"><img src="images/spacer.png" alt=""></td>
-              <td class="tabbarn" id="tabbar2" onclick="changetab(2,5); top.frames['content'].location.href = '/showclients.pyhtml';"><a id="tabbar2a" class="tabbarn" href="/showclients,pyhtml" target="content" onclick="return false;">Clients</td>
+              <td class="tabbarn" id="tabbar2" onclick="changetab(2,5); top.frames['content'].location.href = '/showclients.pyhtml';"><a id="tabbar2a" class="tabbarn" href="/showclients.pyhtml" target="content" onclick="return false;">Clients</td>
               <td class="tabbarnm" id="tabbar2r" onclick="changetab(2,5); top.frames['content'].location.href = '/showclients.pyhtml';"><img src="images/spacer.png" alt=""></td>
               <td class="tabbarn" id="tabbar3" onclick="changetab(3,5);"><a id="tabbar3a" class="tabbarn" href="#" onclick="return false;">Install</td>
               <td class="tabbarnm" id="tabbar3r" onclick="changetab(3,5);"><img src="images/spacer.png" alt=""></td>
