@@ -1,5 +1,8 @@
 <? include /main_top.pyhtml ?>
 
-Do some stuff above or on the left
+Welcome to the Gentoo Linux Installation Management Daemon.
+This application will allow you to create profiles using webgli (or another FE)
+and then deploy them to multiple clients that run gliclient.py
+
 
 <? include /main_bottom.pyhtml ?>
