@@ -1,10 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.575 2006/01/10 12:47:58 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.576 2006/01/11 02:49:18 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
+  10 Jan 2006; Preston Cody <codeman@gentoo.org>
+  src/net/server/*:
+  added add/del/edit client/profile.pythml for glimd.
+  updated templates, showclients, and gliserv.
+  
   10 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/*:
   stupid threading module...
